--- a/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,1 +1,21 @@
-<p>tic-tac-toe works!</p>
+<p>Jogador Atual: 0 </p>
+<p>Vencedor:  </p>
+<p><button>Reiniciar Partida</button></p>
+
+<table>
+    <tr>
+        <td>O</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>X</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
