criando a logica e concluindo o desafio

--- a/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,6 +1,6 @@
 <p>Jogador Atual: {{currentPlayer}} </p>
 <p>Vencedor: {{winner}} </p>
-<p><button>Reiniciar Partida</button></p>
+<p><button (click)="reset()">Reiniciar Partida</button></p>
 
 <table>
     <tr>
